k8s/coma/apps/media/sonarr/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  namespace: ${NAMESPACE}
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: coma-artichoke-network-https
  hostnames:
    - sonarr.coma.artichoke.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 120s
        backendRequest: 120s
      backendRefs:
        - name: sonarr-main
          port: 8989
